# cv_agro_expr

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt  train.py
notebooks/: 01_eda.ipynb  02_classification.ipynb  02_segmentation.ipynb  03_leaf_area.ipynb
src/: __init__.py  dataset.py  model.py  segmentation.py  utils.py
